Additional styling added.

--- a/index.html
+++ b/index.html
@@ -16,15 +16,20 @@
 			
 			<div class="weatherelements">	
 
-	       		<label>Please Enter a City: </label>
+	       	<div class="enter">
+	       		
+	       		<strong><label>Please Enter a City: </label></strong>
+	        	<br>
 	        	<input type="type" id="city">
+
+	        </div>
 		      	
 		      	<p>Temperature (°F): <span id="temp"></span><br></p>
 				<p>Humidity (%): <span id="humidity"></span><br></p>
 				<p>Wind Speed (Miles Per Hour): <span id="speed"></span><br></p>
 				<p>Description: <span id="description"></span><br></p>
 
-				<button id="btn">Let's See the Forecast.</button>
+				<button id="btn">Get Yo Weather !</button>
 
 			</div>
 			
